Defects4J with Randoop 4.2.5 with field extensions; and experimentation scripts